# LOL

./: CMakeLists.txt  README.md  package.xml
include/lego_lol/: lolLocalization.h
include/lol/: lolLocalization.h
launch/: lol.launch
params/: global.yaml  test.yaml
rviz/: test.rviz
src/: lolLocalization.cpp  main.cpp
